--- a/web3.html
+++ b/web3.html
@@ -3,7 +3,7 @@
 </head>
 <body>
 <h1 align="center">Ideas principales de la IA.</h1>
-<div style="text-align: center;">  <img width="325" height="325" src="https://1.bp.blogspot.com/-kqkeciY_dYE/XcepjU-gKtI/AAAAAAAAzaI/47gzqtQHILAp3JfzBEvg4MRwdWiL7hhRgCLcBGAsYHQ/s320/5pasosIA.png">  </div>
+<div style="text-align: center;">  <img width="325" height="325" src="Foto web3.png"> </div>
 
 <p align="center"><b>Las cinco ideas principales que todo el mundo debería conocer acerca de la IA, tal como puede verse en la siguiente figura:</b>
 </p>
